# LunarGLASS

./: .gitignore  CMakeLists.txt  LICENSE.txt  Readme.md  Readme.txt  SetupLinux.sh  Todo.txt  install  release  update
Backends/: CMakeLists.txt
Backends/Dummy/: BottomToDummy.cpp  CMakeLists.txt  DummyTarget.h
Backends/GLSL/: BottomToGLSL.cpp  CMakeLists.txt  GlslManager.h  GlslTarget.h  GlslTranslator.h
Backends/TGSI/: BottomToTgsi.cpp  CMakeLists.txt  TgsiTarget.h
Core/: Backend.cpp  Backend.h  BottomIR.cpp  BottomIR.h  BottomTranslator.cpp  CMakeLists.txt  Exceptions.cpp  Exceptions.h  LunarGLASSManager.h  LunarGLASSTopIR.h  Options.cpp  Options.h  PrivateManager.h  Revision.h  TopBuilder.cpp  TopBuilder.h  TopToBottom.cpp  Util.cpp  Util.h  metadata.h
Core/LLVM/llvm-2.9/include/llvm/: Function.h  IntrinsicsLunarGLASS.td
Core/LLVM/llvm-2.9/lib/Analysis/: ConstantFolding.cpp  LoopInfo.cpp
Core/LLVM/llvm-2.9/lib/Transforms/InstCombine/: InstCombineAddSub.cpp
Core/LLVM/llvm-2.9/lib/Transforms/Scalar/: LoopRotation.cpp  LoopUnrollPass.cpp
Core/LLVM/llvm-2.9/lib/Transforms/Utils/: LoopSimplify.cpp  SimplifyCFG.cpp
Core/LLVM/llvm-2.9/lib/VMCore/: Constants.cpp  Function.cpp  Instruction.cpp
Core/LLVM/llvm-3.2.src/include/llvm/: Function.h  Intrinsics.td  IntrinsicsLunarGLASS.td  IntrinsicsLunarGLASSBottom.td  IntrinsicsLunarGLASSTop.td
Core/LLVM/llvm-3.2.src/lib/Analysis/: ConstantFolding.cpp  ValueTracking.cpp
Core/LLVM/llvm-3.2.src/lib/Transforms/InstCombine/: InstCombineAddSub.cpp
Core/LLVM/llvm-3.2.src/lib/Transforms/Scalar/: GVN.cpp  LoopRotation.cpp
Core/LLVM/llvm-3.2.src/lib/Transforms/Utils/: LoopSimplify.cpp  SimplifyCFG.cpp
Core/LLVM/llvm-3.2.src/lib/VMCore/: Constants.cpp  Function.cpp
Core/LLVM/llvm-3.4/include/llvm/IR/: Function.h  Intrinsics.td  IntrinsicsLunarGLASSBottom.td  IntrinsicsLunarGLASSTop.td
Core/LLVM/llvm-3.4/include/llvm/Transforms/: Scalar.h
Core/LLVM/llvm-3.4/lib/Analysis/: ConstantFolding.cpp  InstructionSimplify.cpp  ValueTracking.cpp
Core/LLVM/llvm-3.4/lib/IR/: Constants.cpp  Function.cpp
Core/LLVM/llvm-3.4/lib/Transforms/Scalar/: GVN.cpp  LoopRotation.cpp
Core/LLVM/llvm-3.4/lib/Transforms/Utils/: LoopSimplify.cpp  SimplifyCFG.cpp
Core/LLVM/llvm-3.6.2/include/llvm/IR/: Intrinsics.td  IntrinsicsLunarGLASSBottom.td  IntrinsicsLunarGLASSTop.td
Core/Passes/: CMakeLists.txt  InitializePasses.h  PassSupport.h  Passes.h
Core/Passes/Analysis/: CMakeLists.txt  IdentifyStructures.cpp  IdentifyStructures.h
Core/Passes/Immutable/: BackEndPointer.cpp  BackEndPointer.h  CMakeLists.txt
Core/Passes/Transforms/: CMakeLists.txt  CanonicalizeCFG.cpp  CanonicalizeInsts.cpp  CoalesceInserts.cpp  DecomposeInsts.cpp  EarlyReturnElim.cpp  FlattenConditionalAssignments.cpp  GatherInsts.cpp  IntrinsicCombine.cpp  Scalarize.cpp
Core/Passes/Util/: ADT.h  BasicBlockUtil.cpp  BasicBlockUtil.h  CMakeLists.txt  ConditionalUtil.cpp  ConditionalUtil.h  ConstantUtil.h  DominatorsUtil.h  FunctionUtil.h  InstructionUtil.cpp  InstructionUtil.h  LoopUtil.h
Frontends/: CMakeLists.txt
Frontends/Glsl2/: GlslToTop.cpp  GlslToTop.h  GlslToTopVisitor.cpp  GlslToTopVisitor.h
Frontends/SPIRV/: CMakeLists.txt  SpvToTop.cpp  SpvToTop.h
Frontends/glslang/: CMakeLists.txt  CodeGen.cpp  GlslangToTop.cpp  GlslangToTop.h  GlslangToTopVisitor.cpp  GlslangToTopVisitor.h  Link.cpp  Todo.txt  main.cpp
Standalone/: CMakeLists.txt  CodeGen.cpp  Link.cpp  LunarGManager.cpp  Makefile  OptionParse.cpp  OptionParse.h  StandAlone.sln  StandAlone.vcxproj  StandAlone.vcxproj.filters  StandAlone_2008.vcproj  main.cpp
legacy_build/: Makefile
legacy_build/CommonBuilder/: CommonBuilder.vcxproj.filters
legacy_build/LunarGLASS/: LunarGLASS.vcxproj  LunarGLASS.vcxproj.filters
legacy_build/glsl2/: glsl2.vcxproj.filters
test/: 100ops.frag  130.frag  140.frag  150.geom  150.vert  300BuiltIns.frag  300BuiltIns.vert  300layout.frag  300layout.vert  310.comp  310BuiltIns.frag  400.tese  AofA.frag  Operations.frag  aep.frag  aep.geom  aep.tesc  aep.tese  aep.vert  atomic.comp  block.frag  conditionalDiscard.frag  conversion.frag  dataOut.frag  dataOutIndirect.vert  deepRvalue.frag  depthOut.frag  earlyReturn.frag  flowControl.frag  forLoop.frag  forwardFun.frag  functionCall.frag  functionSemantics.frag  implicitSizedArray.comp  intOps.vert  loops.frag  matFun.vert  matrix.frag  matrix2.frag  matrix3.frag  (+24 more)
test/baseResults/: 100ops.frag.out  130.frag.out  140.frag.out  150.geom.out  150.vert.out  300BuiltIns.frag.out  300BuiltIns.vert.out  300layout.frag.out  300layout.vert.out  310.comp.out  310BuiltIns.frag.out  330.geom.out  400.frag.out  400.tesc.out  400.tese.out  420.geom.out  430.vert.out  AofA.frag.out  Operations.frag.out  aep.frag.out  aep.geom.out  aep.tesc.out  aep.tese.out  aep.vert.out  aggOps.frag.out  always-discard.frag.out  always-discard2.frag.out  atomic.comp.out  block.frag.out  conditionalDiscard.frag.out  conversion.frag.out  dataOut.frag.out  dataOutIndirect.frag.out  dataOutIndirect.vert.out  deepRvalue.frag.out  depthOut.frag.out  discard-dce.frag.out  doWhileLoop.frag.out  earlyReturn.frag.out  earlyReturnDiscard.frag.out  (+47 more)
test/glsl/: Operations.frag.out  aggOps.frag.out  always-discard.frag.out  always-discard2.frag.out  conditionalDiscard.frag.out  dataOut.frag.out  dataOutIndirect.frag.out  dataOutIndirect.vert.out  deepRvalue.frag.out  depthOut.frag.out  discard-dce.frag.out  earlyReturnDiscard.frag.out  flowControl.frag.out  forLoop.frag.out  functionCall.frag.out  functionSemantics.frag.out  length.frag.out  localAggregates.frag.out  loops.frag.out  loopsArtificial.frag.out  matrix.frag.out  matrix2.frag.out  newTexture.frag.out  simpleFunctionCall.frag.out  structAssignment.frag.out  structDeref.frag.out  structure.frag.out  swizzle.frag.out  test.frag.out  test.vert.out  texture.frag.out  texture.vert.out  types.frag.out  uniformArray.frag.out  variableArrayIndex.frag.out  varyingArray.frag.out  varyingArrayIndirect.frag.out  voidFunction.frag.out  whileLoop.frag.out
test/glslang/: 100ops.frag.out  300BuiltIns.frag.out  (+59 more)
(+236 files in other folders)
